third_party/move/move-compiler-v2/tests/simplifier-elimination/if_assigns_no_else.exp
// -- Model dump before first bytecode pipeline
module <SELF>_0 {
    private fun main() {
        {
          let x: u64;
          if true {
            x: u64 = 42
          } else {
            Tuple()
          };
          if Eq<u64>(x, 42) {
            Tuple()
          } else {
            Abort(42)
          };
          Tuple()
        }
    }
} // end <SELF>_0

// -- Sourcified model before first bytecode pipeline
script {
    fun main() {
        let x;
        if (true) x = 42;
        if (x == 42) () else abort 42;
    }
}


Diagnostics:
error: use of possibly unassigned local `x`
  ┌─ tests/simplifier-elimination/if_assigns_no_else.move:5:13
  │
5 │     assert!(x == 42, 42);
  │             ^
